FrontEnd segundo avance ya casi terminado :+1:

--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -29,8 +29,8 @@
 
 		<ui:define name="content">
 			<div class="c-login-main">
-				<h:graphicImage value="/resources/img/rmts4.png" height="100%"
-					width="50%">
+				<h:graphicImage value="/resources/img/bg-register.png" height="100%"
+					width="100%">
 				</h:graphicImage>
 				<div class="d-derecha">
 					<div class="d-login">
@@ -38,7 +38,7 @@
 							propietarios</a> <br /> <br />
 						<h1 class="t-login">Entra a la comunidad.</h1>
 						<br />
-						<p class="t-eresnuevo">¿Eres nuevo? Registrate aquí.</p>
+						<p class="t-eresnuevo">¿Eres nuevo?<a href="Registro.xhtml" class="registrate-aqui"> Registrate aquí.</a></p>
 						<br />
 						<h:form id="login-form" prependId="false">
 							<p:messages autoUpdate="true" />
