--- a/src/main/webapp/c_editSusR.xhtml
+++ b/src/main/webapp/c_editSusR.xhtml
@@ -15,11 +15,12 @@
 				<h1 class="logo_findr">FindRoomie</h1>
 				<div class="navigation">
 					<ul class="enlaces">
-						<li><a href="porverse.xhtml" class="header-link">Inicio</a></li>
+						<li><a href="RoomieInicio.xhtml" class="header-link">Inicio</a></li>
 						<li><a href="#" class="header-link">Sobre Nosotros</a></li>
 						<li><a href="#" class="header-link">Lugares</a></li>
 						<li><a href="#" class="header-link">Contacto</a></li>
 						<li><a href="c_editPerfilR.xhtml" class="header-link">Configuración</a></li>
+						<li><a href="pSuscripcionR.xhtml" class="btn-sus1">Premium</a></li>
 						
 					</ul>
 				</div>
@@ -41,7 +42,7 @@
 							<li><a href="#" class="config-link">Ayuda</a></li>
 							<br />
 							<br />
-							<li><a href="#" class="config-link">Cerrar sesión</a></li>
+							<li><a href="home.xhtml" class="config-link">Cerrar sesión</a></li>
 						</ul>
 						<h:graphicImage value="/resources/img/g-config.svg" height="60%"
 							width="60%">
