--- a/src/main/webapp/pSuscripcionR.xhtml
+++ b/src/main/webapp/pSuscripcionR.xhtml
@@ -15,49 +15,25 @@
 				<h1 class="logo_findr">FindRoomie</h1>
 				<div class="navigation">
 					<ul class="enlaces">
-						<li><a href="porverse.xhtml" class="header-link">Inicio</a></li>
+						<li><a href="RoomieInicio.xhtml" class="header-link">Inicio</a></li>
 						<li><a href="#" class="header-link">Sobre Nosotros</a></li>
 						<li><a href="#" class="header-link">Lugares</a></li>
 						<li><a href="#" class="header-link">Contacto</a></li>
 						<li><a href="c_editPerfilR.xhtml" class="header-link">Configuración</a></li>
-
+						
 					</ul>
 				</div>
 			</div>
 		</ui:define>
 
 		<ui:define name="content">
-
-			<div class="c-main-config">
-				<h:graphicImage value="/resources/img/bg-config.png" height="100%"
-					width="100%"></h:graphicImage>
-				<div class="c-flex-config">
-					<div class="p-config-izq">
-						<ul class="config-list">
-							<li><a href="c_editPerfilR.xhtml" class="config-link">Editar
-									perfil</a></li>
-
-							<li><a href="c_editSusR.xhtml" class="config-link">Administrar
-									suscripción</a></li>
-							<li><a href="#" class="config-link">Ayuda</a></li>
-							<br />
-							<br />
-							<li><a href="home.xhtml" class="config-link">Cerrar
-									sesión</a></li>
-						</ul>
-						<h:graphicImage value="/resources/img/g-config.svg" height="60%"
-							width="60%">
-						</h:graphicImage>
-
-					</div>
-					<div class="p-config-der-sus">
-						<h1>Administrar suscripción</h1>
-						<br />
-						<h4>Usted no cuenta con ninguna suscripción activa.</h4>
-					</div>
-
+			<div class="c-sus">
+				<h:graphicImage value="/resources/img/premiumbg.png" height="100%"
+					width="100%">
+				</h:graphicImage>
+				<div class="aux-sus">
+				<a href="#" class="btn-m-sus">Suscríbete</a>
 				</div>
-
 			</div>
 
 		</ui:define>
