--- a/src/main/webapp/LoginP.xhtml
+++ b/src/main/webapp/LoginP.xhtml
@@ -27,8 +27,8 @@
 
 		<ui:define name="content">
 			<div class="c-login-main">
-				<h:graphicImage value="/resources/img/friend2.png" height="100%"
-					width="50%">
+				<h:graphicImage value="/resources/img/bg-loginn.png" height="100%"
+					width="100%">
 				</h:graphicImage>
 				<div class="d-derecha">
 					<div class="d-login">
@@ -36,7 +36,7 @@
 							roomies</a> <br /> <br />
 						<h1 class="t-login">Entra a la comunidad.</h1>
 						<br />
-						<p class="t-eresnuevo">¿Eres nuevo? Registrate aquí.</p>
+						<p class="t-eresnuevo">¿Eres nuevo?<a href="RegistroP.xhtml" class="registrate-aqui"> Registrate aquí.</a></p>
 						<br />
 						<h:form id="login-form" prependId="false">
 							<p:messages autoUpdate="true" />
