--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -133,7 +133,7 @@
 							value="Registrar" 
 							actionListener="#{roomieController.insertarRoomie()}"
 							onclick="alert('Roomie registrado')"
-							action="home?faces-redirect=true"
+							action="RoomieInicio?faces-redirect=true"
 							/>
 								
 
