--- a/src/main/webapp/RegistroP.xhtml
+++ b/src/main/webapp/RegistroP.xhtml
@@ -7,7 +7,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-
+	
 <h:body>
 	<ui:composition template="templates/common.xhtml">
 		<ui:define name="header">
@@ -151,7 +151,7 @@
 							<h:commandButton id="btn-RE-registroR" value="Registrar"
 								actionListener="#{propietarioController.insertarPropietario()}"
 								onclick="alert('Propietario registrado')"
-								action="home?faces-redirect=true" />
+								action="RegistroVivienda?faces-redirect=true" />
 
 						</h:form>
 					</div>
