--- a/src/main/webapp/VerViviendaR.xhtml
+++ b/src/main/webapp/VerViviendaR.xhtml
@@ -44,13 +44,15 @@
 							<br />
 							<h:inputText autocomplete="off" id="i-VV-direccion"
 								styleClass="form-control" readonly="true"
-								placeholder="direccion" value="" maxlength="45" required="true" />
+								placeholder="direccion" 
+								value="#{viviendaController.vivienda.direccionV}" 
+								maxlength="200" required="true" />
 							<br /> <br />
 							<h:outputLabel for="NroCuartos" id="l-VV-nrocuartos"
 								value="Nro de Cuartos " styleClass="control-label" />
 							<br />
 							<h:inputText autocomplete="off" id="i-VV-nrocuartos" value=""
-								readonly="true" placeholder="Nrocuarto" maxlength="45"
+								readonly="true" placeholder="Nrocuarto" maxlength="1"
 								required="true" styleClass="form-control" />
 							<br /> <br />
 						</div>
