--- a/src/main/webapp/c_editPerfilR.xhtml
+++ b/src/main/webapp/c_editPerfilR.xhtml
@@ -106,6 +106,38 @@
 
 							<br />
 							<br />
+							<h:outputLabel for="Dirección" id="l-EP-direccion"
+								value="Dirección " styleClass="control-label" />
+							<br />
+							<h:inputSecret autocomplete="off" id="i-EP-direccion" value=""
+								maxlength="45" required="true" styleClass="form-control" />
+
+							<br />
+							<br />
+							<h:outputLabel for="Dirección" id="l-EP-direccion"
+								value="Dirección " styleClass="control-label" />
+							<br />
+							<h:inputSecret autocomplete="off" id="i-EP-direccion" value=""
+								maxlength="45" required="true" styleClass="form-control" />
+
+							<br />
+							<br />
+							<h:outputLabel for="Dirección" id="l-EP-direccion"
+								value="Dirección " styleClass="control-label" />
+							<br />
+							<h:inputSecret autocomplete="off" id="i-EP-direccion" value=""
+								maxlength="45" required="true" styleClass="form-control" />
+
+							<br />
+							<br />
+							<h:outputLabel for="Dirección" id="l-EP-direccion"
+								value="Dirección " styleClass="control-label" />
+							<br />
+							<h:inputSecret autocomplete="off" id="i-EP-direccion" value=""
+								maxlength="45" required="true" styleClass="form-control" />
+
+							<br />
+							<br />
 
 
 							<h:commandButton id="btn-EP-cancelar" value="Cancelar" />
